2025-01-01T00:41:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12565471809 # 744
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-01
* notice: last 14d: unq all: 20 68
* notice: prev accum: outdated-unq outdated-all / unq all: 916 4852 / 937 4920
* notice: next accum: outdated-unq outdated-all / unq all: 918 4854 / 938 4922
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-12-17] / [2024-12-31]

2024-12-31T00:37:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12553677439 # 742
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-31
* notice: last 14d: unq all: 21 68
* notice: prev accum: outdated-unq outdated-all / unq all: 913 4842 / 937 4920
* notice: next accum: outdated-unq outdated-all / unq all: 916 4852 / 937 4920
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-16] / []

2024-12-30T12:14:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12546371115 # 741
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-30
* notice: last 14d: unq all: 24 78
* notice: prev accum: outdated-unq outdated-all / unq all: 913 4842 / 936 4919
* notice: next accum: outdated-unq outdated-all / unq all: 913 4842 / 937 4920
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-30]

2024-12-30T00:39:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12540058222 # 740