@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-01T00:41:15Z",
-  "count_outdated" : 4854,
-  "uniques_outdated" : 918,
+  "timestamp" : "2025-01-02T00:37:04Z",
+  "count_outdated" : 4858,
+  "uniques_outdated" : 920,
   "count" : 4922,
   "uniques" : 938,
   "views" : [
-    {
-      "timestamp": "2024-12-19T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-12-20T00:00:00Z",
       "count": 8,
