@@ -1,12 +1,7 @@
 {
-  "count": 68,
-  "uniques": 20,
+  "count": 64,
+  "uniques": 18,
   "views": [
-    {
-      "timestamp": "2024-12-19T00:00:00Z",
-      "count": 4,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-12-20T00:00:00Z",
       "count": 8,
