@@ -1,3 +1,12 @@
+2025-01-02T00:37:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12575843438 # 746
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-02
+* notice: last 14d: unq all: 18 64
+* notice: prev accum: outdated-unq outdated-all / unq all: 918 4854 / 938 4922
+* notice: next accum: outdated-unq outdated-all / unq all: 920 4858 / 938 4922
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-19] / []
+
 2025-01-01T00:41:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12565471809 # 744
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-01
